# engram

./: .env.example  .gitignore  AGENTS.md  AI_ASSISTANT_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTROL_PLANE_SCHEMA.sql  Cargo.toml  Dockerfile  ENGRAM_MCP_GUIDE.md  ERRORS_AND_LESSONS.md  IMPROVEMENTS.md  INVARIANTS.md  OPERATIONS.md  QUICKSTART.md  README.md  REFERENCE.md  SECURITY.md  STANDARDS.md  benchmark_baseline.txt  benchmark_results.txt  build.rs  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  nightly.yml  release.yml
.orchestrator/artifacts/T1/: reasoning.md
.orchestrator/artifacts/T10/: reasoning.md
.orchestrator/artifacts/T11/: reasoning.md
.orchestrator/artifacts/T12/: reasoning.md
.orchestrator/artifacts/T13/: reasoning.md
.orchestrator/artifacts/T14/: reasoning.md
.orchestrator/artifacts/T4/: reasoning.md
.orchestrator/artifacts/T5/: reasoning.md
.orchestrator/artifacts/T6/: reasoning.md
.orchestrator/artifacts/T8/: reasoning.md
.orchestrator/artifacts/engram-wasm-scaffold/: reasoning.md
.orchestrator/artifacts/resumable-sse/: reasoning.md
.orchestrator/artifacts/sdk-v0.2.0/: reasoning.md
benches/: community_detection.rs  entity_extraction.rs  mcp_dispatch.rs  memory_ops.rs  search.rs  traversal.rs
docs/: AI_GUIDE.md  CLOUD_ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  FEATURE_GAP_ANALYSIS.md  GETTING_STARTED.md  LINEAR_ISSUES.md  MEMORA_VS_ENGRAM.md  README.md  ROADMAP.md  SCHEMA.md
docs/concepts/: CONTEXT_SEEDING.md  WHY_NOT_VECTOR_DB.md
engram-wasm/: Cargo.toml  README.md
engram-wasm/src/: bm25.rs  entity.rs  graph.rs  lib.rs  rrf.rs  tfidf.rs
proto/: mcp.proto
scripts/: README.md  bench-baseline.sh  bench-compare.sh
sdks/python/: .gitignore  README.md  pyproject.toml
sdks/python/engram_client/: __init__.py  client.py
sdks/python/engram_client/integrations/: __init__.py  crewai.py  langchain.py  llamaindex.py  openai_threads.py
sdks/python/tests/: test_crewai.py  test_langchain.py  test_llamaindex.py  test_openai_threads.py
sdks/typescript/: package.json
sdks/typescript/src/: index.ts
specs/rml-928-document-ingestion/: 01-spec.md  02-clarify.md  03-plan.md  04-tasks.md  05-checklist.md  06-status.md
src/: error.rs  lib.rs  types.rs
src/attestation/: chain.rs  export.rs  merkle.rs  mod.rs  types.rs
src/auth/: mod.rs  permissions.rs  tokens.rs  users.rs
src/bench/: locomo.rs  longmemeval.rs  membench.rs  mod.rs
src/embedding/: cache.rs  clip.rs  cohere.rs  mod.rs  ollama.rs  onnx.rs  provider.rs  queue.rs  tfidf.rs  voyage.rs
src/graph/: coactivation.rs  conflicts.rs  duckdb_graph.rs  mod.rs  temporal.rs  triplets.rs
src/integrations/: langfuse.rs  mod.rs
src/intelligence/: agent_loop.rs  auto_capture.rs  auto_tagging.rs  compression.rs  compression_semantic.rs  consolidation.rs  consolidation_offline.rs  content_utils.rs  context_builder.rs  context_compression.rs  context_quality.rs  document_ingest.rs  emotional.rs  entities.rs  entity_extraction.rs  fact_extraction.rs  gardening.rs  memory_update.rs  mod.rs  natural_language.rs  proactive.rs  project_context.rs  quality.rs  salience.rs  session_context.rs  session_indexing.rs  suggestions.rs  synthesis.rs
src/mcp/: grpc_transport.rs  http_transport.rs  mod.rs  prompts.rs  protocol.rs  resources.rs  tools.rs
src/mcp/handlers/: agent.rs  attestation.rs  autonomous.rs  compression.rs  context.rs  document_ingest.rs  duckdb_graph.rs  emergent_graph.rs  evolution.rs  graph.rs  handoff.rs  identity.rs  lifecycle.rs  markdown_export.rs  memory_crud.rs  misc.rs  mod.rs  multimodal.rs  project_context.rs  quality.rs  retrieval.rs  search.rs  session.rs  snapshot.rs  stats.rs  summarize.rs  sync.rs  temporal.rs  workspace.rs
src/multimodal/: audio.rs  mod.rs  screenshot.rs  video.rs  vision.rs
src/realtime/: events.rs  mod.rs  server.rs
src/search/: aggregation.rs  bm25.rs  explain.rs  feedback.rs  fuzzy.rs  hybrid.rs  metadata.rs  mmr.rs  mod.rs  neural_rerank.rs  rerank.rs  result_cache.rs  semantic_cache.rs  utility.rs
src/snapshot/: builder.rs  crypto.rs  loader.rs  mod.rs  types.rs
src/storage/: agent_registry.rs  audit.rs  auto_linker.rs  backend.rs  clustering.rs  confidence.rs  connection.rs  entity_queries.rs  filter.rs  graph_queries.rs  identity_links.rs  image_storage.rs  meilisearch_backend.rs  meilisearch_indexer.rs  memory_blocks.rs  migrations.rs  mod.rs  queries.rs  scope_grants.rs  scoping.rs  sqlite_backend.rs  temporal.rs  turso_backend.rs
src/sync/: cloud.rs  mod.rs  worker.rs
src/sync/conflict/: detector.rs  merge.rs  mod.rs  resolver.rs
src/watcher/: app_focus.rs  browser.rs  config.rs  fs_watcher.rs  mod.rs
tests/: duckdb_graph_tests.rs  golden_tests.rs  grpc_transport.rs  mcp_protocol_tests.rs  property_tests.rs  snapshot_attestation.rs  turso_backend_tests.rs  v070_integration_tests.rs  watcher_integration.rs
tests/fixtures/: alias_normalization.json  entity_extraction.json  workspace_normalization.json
