[package]
name = "engram"
version = "0.1.0"
edition = "2021"
authors = ["Ronaldo Lima"]
description = "AI Memory Infrastructure - Persistent memory for AI agents with semantic search"
license = "MIT"
repository = "https://github.com/limaronaldo/engram"
keywords = ["ai", "memory", "mcp", "semantic-search", "sqlite"]
categories = ["database", "text-processing"]

[lib]
name = "engram"
path = "src/lib.rs"

[[bin]]
name = "engram-server"
path = "src/bin/server.rs"

[[bin]]
name = "engram-cli"
path = "src/bin/cli.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
rusqlite = { version = "0.31", features = ["bundled", "vtab", "functions", "trace"] }
deadpool-sqlite = "0.8"

# Vector search (sqlite-vec)
sqlite-vec = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP/WebSocket server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# MCP Protocol (JSON-RPC over stdio)
jsonrpc-core = "18.0"

# Embeddings - ONNX Runtime disabled for now (use tfidf or openai)
# ort = { version = "2.0.0-rc.11", features = ["download-binaries"] }
# tokenizers = "0.19"

# Shell expansion for paths
shellexpand = "3.1"

# OpenAI API client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Cloud storage (S3/R2/GCS)
aws-sdk-s3 = "1.12"
aws-config = "1.1"

# Encryption
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
parking_lot = "0.12"
dashmap = "5.5"
once_cell = "1.19"
regex = "1.10"
levenshtein = "1.0"
hex = "0.4"
sha2 = "0.10"

# Document ingestion (RML-928)
pulldown-cmark = "0.10"
pdf-extract = "0.7"

# Async channels for embedding queue
async-channel = "2.1"
futures = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.9"
tokio-test = "0.4"
pretty_assertions = "1.4"
fake = { version = "2.9", features = ["derive"] }

[[bench]]
name = "memory_ops"
harness = false

[[bench]]
name = "search"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
lto = true
codegen-units = 1
