[package]
name = "engram"
version = "0.4.0"
edition = "2021"
authors = ["Ronaldo Lima"]
description = "AI Memory Infrastructure - Persistent memory for AI agents with semantic search"
license = "MIT"
repository = "https://github.com/limaronaldo/engram"
keywords = ["ai", "memory", "mcp", "semantic-search", "sqlite"]
categories = ["database", "text-processing"]

[lib]
name = "engram"
path = "src/lib.rs"

[[bin]]
name = "engram-server"
path = "src/bin/server.rs"

[[bin]]
name = "engram-cli"
path = "src/bin/cli.rs"

[features]
default = ["cloud", "openai"]

# Cloud sync (S3/R2/GCS) - adds ~2MB to binary
cloud = ["dep:aws-sdk-s3", "dep:aws-config", "dep:aes-gcm"]

# OpenAI embeddings - requires API key
openai = ["dep:reqwest"]

# PDF document ingestion
pdf = ["dep:pdf-extract"]

# Langfuse observability integration (Phase 3 - ENG-35)
langfuse = ["dep:reqwest"]

# Turso/libSQL support (Phase 6 - ENG-54)
turso = ["dep:libsql"]

# Meilisearch integration (Phase 7 - ENG-58)
meilisearch = ["dep:meilisearch-sdk"]

# All features
full = ["cloud", "openai", "pdf", "langfuse", "turso", "meilisearch"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
rusqlite = { version = "0.31", features = ["bundled", "vtab", "functions", "trace"] }
deadpool-sqlite = "0.8"

# Vector search (sqlite-vec)
sqlite-vec = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP/WebSocket server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# MCP Protocol (JSON-RPC over stdio)
jsonrpc-core = "18.0"

# Shell expansion for paths
shellexpand = "3.1"

# OpenAI API client (optional, feature-gated)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }

# Cloud storage (S3/R2/GCS) - optional, feature-gated
aws-sdk-s3 = { version = "1.12", optional = true }
aws-config = { version = "1.1", optional = true }

# Encryption (for cloud sync)
aes-gcm = { version = "0.10", optional = true }
rand = "0.8"
base64 = "0.21"

# Turso/libSQL (Phase 6 - ENG-54)
# Enable core + replication + remote for full functionality
libsql = { version = "0.6", optional = true, features = ["core", "replication", "remote"] }

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
parking_lot = "0.12"
dashmap = "5.5"
once_cell = "1.19"
regex = "1.10"
levenshtein = "1.0"
hex = "0.4"
sha2 = "0.10"

# Token counting for context compression (Phase 2)
tiktoken-rs = "0.5"

# Document ingestion (RML-928)
pulldown-cmark = "0.10"
pdf-extract = { version = "0.7", optional = true }

# Async channels for embedding queue
async-channel = "2.1"
futures = "0.3"
meilisearch-sdk = { version = "0.32.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.9"
tokio-test = "0.4"
pretty_assertions = "1.4"
fake = { version = "2.9", features = ["derive"] }
proptest = "1.4"

[[bench]]
name = "memory_ops"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "community_detection"
harness = false

[[bench]]
name = "entity_extraction"
harness = false

[[bench]]
name = "traversal"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
lto = true
codegen-units = 1
