[package]
name = "engram-core"
version = "0.14.0"
edition = "2021"
authors = ["Ronaldo Lima"]
description = "AI Memory Infrastructure - Persistent memory for AI agents with semantic search"
license = "MIT"
repository = "https://github.com/limaronaldo/engram"
homepage = "https://github.com/limaronaldo/engram"
documentation = "https://docs.rs/engram-core"
keywords = ["ai", "memory", "mcp", "semantic-search", "sqlite"]
categories = ["database", "text-processing"]
readme = "README.md"

[lib]
name = "engram"
path = "src/lib.rs"

[[bin]]
name = "engram-server"
path = "src/bin/server.rs"

[[bin]]
name = "engram-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "engram-bench"
path = "src/bin/bench.rs"

[[bin]]
name = "engram-watcher"
path = "src/bin/watcher.rs"
required-features = ["watcher"]

[[bin]]
name = "engram-agent"
path = "src/bin/agent.rs"

[features]
default = ["cloud", "openai"]

# Cloud sync (S3/R2/GCS) - adds ~2MB to binary
cloud = ["dep:aws-sdk-s3", "dep:aws-config", "dep:aes-gcm"]

# OpenAI embeddings - requires API key
openai = ["dep:reqwest"]

# Multimodal vision processing (Gemini + OpenAI Vision)
multimodal = ["dep:reqwest", "dep:async-trait"]

# PDF document ingestion
pdf = ["dep:pdf-extract"]

# Langfuse observability integration (Phase 3 - ENG-35)
langfuse = ["dep:reqwest"]

# Turso/libSQL support (Phase 6 - ENG-54)
turso = ["dep:libsql"]

# Meilisearch integration (Phase 7 - ENG-58)
meilisearch = ["dep:meilisearch-sdk"]

# File/browser/app watcher daemon
watcher = ["dep:toml", "dep:tempfile", "dep:notify", "dep:reqwest"]

# Emergent graph: auto-links (semantic/temporal/co-occurrence) and community detection clusters
emergent-graph = []

# Ollama local embedding backend
ollama = []

# Cohere embedding backend
cohere = []

# Voyage AI embedding backend
voyage = []

# ONNX-based local embedding models
onnx-embed = ["dep:ort", "dep:ndarray"]

# Neural cross-encoder reranking via ONNX
neural-rerank = ["dep:ort", "dep:ndarray"]

# Retrieval excellence: MMR diversity + semantic cache
retrieval-excellence = []

# Context engineering: prompt construction + fact extraction
context-engineering = []

# Temporal knowledge graph support
temporal-graph = []

# DuckDB-backed distributed graph analysis (Phase M)
duckdb-graph = ["dep:duckdb"]

# Semantic compression: compress/decompress memory content, context-window packing
compression = []

# Agentic evolution: emotional analysis, memory updates, utility scoring, reflections
agentic-evolution = []

# Advanced graph: coactivation edges, conflict detection, SPARQL-like triplet queries
advanced-graph = []

# Autonomous agent: full agentic loop combining all advanced capabilities
autonomous-agent = ["compression", "agentic-evolution", "advanced-graph"]

# Agent portability: snapshot + attestation for multi-agent memory sharing (Phase L)
agent-portability = ["dep:zip", "dep:ed25519-dalek", "dep:aes-gcm"]

# All features
full = ["cloud", "openai", "pdf", "langfuse", "turso", "meilisearch", "watcher", "multimodal", "emergent-graph", "ollama", "cohere", "voyage", "onnx-embed", "neural-rerank", "retrieval-excellence", "context-engineering", "temporal-graph", "duckdb-graph", "compression", "agentic-evolution", "advanced-graph", "autonomous-agent", "agent-portability"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
rusqlite = { version = "0.31", features = ["bundled", "vtab", "functions", "trace"] }
deadpool-sqlite = "0.8"

# Vector search (sqlite-vec)
sqlite-vec = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP/WebSocket server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# MCP Protocol (JSON-RPC over stdio)
jsonrpc-core = "18.0"

# Shell expansion for paths
shellexpand = "3.1"

# OpenAI API client (optional, feature-gated)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false, optional = true }

# Async trait support for vision providers (optional, feature-gated)
async-trait = { version = "0.1", optional = true }

# Cloud storage (S3/R2/GCS) - optional, feature-gated
aws-sdk-s3 = { version = "1.12", optional = true }
aws-config = { version = "1.1", optional = true }

# Encryption (for cloud sync)
aes-gcm = { version = "0.10", optional = true }
rand = "0.8"
base64 = "0.21"

# Agent portability (Phase L)
zip = { version = "2.0", optional = true, default-features = false, features = ["deflate"] }
ed25519-dalek = { version = "2.1", optional = true, features = ["rand_core"] }

# Turso/libSQL (Phase 6 - ENG-54)
# Enable core + replication + remote for full functionality
libsql = { version = "0.6", optional = true, features = ["core", "replication", "remote"] }

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
parking_lot = "0.12"
dashmap = "5.5"
once_cell = "1.19"
regex = "1.10"
levenshtein = "1.0"
hex = "0.4"
sha2 = "0.10"

# Token counting for context compression (Phase 2)
tiktoken-rs = "0.5"

# Document ingestion (RML-928)
pulldown-cmark = "0.10"
pdf-extract = { version = "0.7", optional = true }

# Async channels for embedding queue
async-channel = "2.1"
futures = "0.3"

# Stream utilities (SSE event streaming)
tokio-stream = { version = "0.1", features = ["sync"] }
meilisearch-sdk = { version = "0.32.0", optional = true }

# ONNX runtime for local neural models (onnx-embed, neural-rerank features)
ort = { version = "2.0.0-rc.12", optional = true }
ndarray = { version = "0.16", optional = true }

# TOML config parsing (watcher feature)
toml = { version = "0.8", optional = true }

# Watcher: filesystem events
notify = { version = "7", optional = true }

# Watcher: temp-file copying for locked browser DBs
tempfile = { version = "3.9", optional = true }

# DuckDB for distributed graph analysis (Phase M)
duckdb = { version = "1.4", features = ["bundled", "chrono"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.9"
tokio-test = "0.4"
pretty_assertions = "1.4"
fake = { version = "2.9", features = ["derive"] }
proptest = "1.4"

[[bench]]
name = "memory_ops"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "community_detection"
harness = false

[[bench]]
name = "entity_extraction"
harness = false

[[bench]]
name = "traversal"
harness = false

[[bench]]
name = "mcp_dispatch"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
lto = true
codegen-units = 1
