[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "engram-client"
version = "0.1.0"
description = "Python client for Engram Cloud - AI memory infrastructure"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Ronaldo Lima"}]
keywords = ["engram", "ai", "memory", "mcp", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/limaronaldo/engram"
Repository = "https://github.com/limaronaldo/engram-python-sdk"

[tool.setuptools.packages.find]
include = ["engram_client*"]
